# blockchain-demo

./: CMakeLists.txt  README.md
include/blockchain/: block.h  transaction.h  utils  wallet.h
include/blockchain/bchain_utils/: encoding.h  time.h
src/: block.cc  transaction.cc  wallet.cc
src/bchain_utils/: encoding.cc  time.cc
tests/: test_block_hash_generation.cc  test_main.cc  test_wallet_generating.cc  test_wallet_sign_verify.cc
